fix the change password issue